Add a mobile-only "quick add" menu for adding activities with larger (link) targets than the regular menu.

--- a/babyblotter/static_src/scss/_global.scss
+++ b/babyblotter/static_src/scss/_global.scss
@@ -1,1 +1,7 @@
-// Baby Blotter site-wide custom functions.
+// Baby Blotter site-wide custom styles.
+
+// Temporary workaround. See: https://github.com/twbs/bootstrap/issues/23553
+.dropdown-menu-right {
+  right: 0;
+  left: auto; // Reset the default from `.dropdown-menu`
+  }
