Return input bakgrounds to regular white.

--- a/babyblotter/static_src/scss/themes/blueorange.scss
+++ b/babyblotter/static_src/scss/themes/blueorange.scss
@@ -73,7 +73,7 @@ $table-accent-bg: rgba(theme-color("primary"), .1);
 
 // Forms
 
-$input-bg: $gray-400;
+$input-bg: $white;
 $input-disabled-bg: $gray-600;
 $input-color: $black;
 $input-border-color: rgba($gray-600,.15);
