Add Breadcrumbs color config to Blue Orange theme.

--- a/babyblotter/static_src/scss/themes/blueorange.scss
+++ b/babyblotter/static_src/scss/themes/blueorange.scss
@@ -138,3 +138,9 @@ $list-group-active-bg: $component-active-bg !default;
 $list-group-active-border-color: $list-group-active-bg !default;
 $list-group-action-color: $gray-400;
 $list-group-action-hover-color: $list-group-action-color;
+
+
+// Breadcrumbs
+
+$breadcrumb-bg:                     none;
+$breadcrumb-active-color:           $white;
