--- a/babyblotter/static_src/scss/themes/blueorange.scss
+++ b/babyblotter/static_src/scss/themes/blueorange.scss
@@ -143,4 +143,4 @@ $list-group-action-hover-color: $list-group-action-color;
 // Breadcrumbs
 
 $breadcrumb-bg:                     none;
-$breadcrumb-active-color:           $white;
+$breadcrumb-active-color:           $gray-600;
