--- a/babyblotter/templates/babyblotter/nav-dropdown.html
+++ b/babyblotter/templates/babyblotter/nav-dropdown.html
@@ -1,5 +1,5 @@
 {% extends 'babyblotter/base.html' %}
-{% load babyblotter timers %}
+{% load timers %}
 
 {% block nav %}
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -153,7 +153,4 @@
             {% endif %}
         </div>
     </nav>
-
-    {% breadcrumbs %}
-
 {% endblock %}
