--- a/babyblotter/templates/babyblotter/page.html
+++ b/babyblotter/templates/babyblotter/page.html
@@ -1,6 +1,5 @@
 {% extends 'babyblotter/nav-dropdown.html' %}
-{% load static %}
-{% load timers %}
+{% load static timers %}
 
 {% block page %}
     <div id="view-{{ request.resolver_match.view_name }}" class="container-fluid">
