--- a/reports/templates/reports/diaperchange_lifetimes.html
+++ b/reports/templates/reports/diaperchange_lifetimes.html
@@ -2,6 +2,11 @@
 
 {% block title %}Diaper Lifetimes - {{ object }}{% endblock %}
 
+{% block breadcrumbs %}
+    {{ block.super }}
+    <li class="breadcrumb-item active" aria-current="page">Diaper Lifetimes</li>
+{% endblock %}
+
 {% block javascript %}
     {{ block.super }}
     {{ javascript|safe }}
