--- a/core/templates/core/tummytime_confirm_delete.html
+++ b/core/templates/core/tummytime_confirm_delete.html
@@ -3,6 +3,11 @@
 
 {% block title %}Delete a Tummy Time Entry{% endblock %}
 
+{% block breadcrumbs %}
+    <li class="breadcrumb-item"><a href="{% url 'tummytime-list' %}">Tummy Time</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Delete</li>
+{% endblock %}
+
 {% block content %}
     <form role="form" method="post">
         {% csrf_token %}
