--- a/core/templates/core/tummytime_list.html
+++ b/core/templates/core/tummytime_list.html
@@ -4,6 +4,10 @@
 
 {% block title %}Tummy Time{% endblock %}
 
+{% block breadcrumbs %}
+    <li class="breadcrumb-item active" aria-current="page">Tummy Time</li>
+{% endblock %}
+
 {% block content %}
     <h1>Tummy Time</h1>
     <div class="table-responsive">
@@ -21,7 +25,7 @@
             <tbody>
                 {% for tummytime in object_list %}
                     <tr>
-                        <th scope="row">{{ tummytime.child }}</th>
+                        <th scope="row"><a href="{% url 'child' tummytime.child.slug %}">{{ tummytime.child }}</a></th>
                         <td>{{ tummytime.duration|duration_string }}</td>
                         <td>{{ tummytime.start|date:'n/j/y G:i' }}</td>
                         <td>{{ tummytime.end|date:'n/j/y G:i' }}</td>
