--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -3,25 +3,14 @@
 
 {% block title %}Dashboard - {{ object }}{% endblock %}
 
+{% block breadcrumbs %}
+    <li class="breadcrumb-item"><a href="{% url 'child-list' %}">Children</a></li>
+    <li class="breadcrumb-item font-weight-bold"><a href="{% url 'child' object.slug %}">{{ object }}</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Dashboard</li>
+{% endblock %}
+
 {% block content %}
-
-    <div class="dropdown">
-        <button id="reports-dropdown"
-                class="btn btn-success dropdown-toggle"
-                type="button"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"><i class="icon icon-graph" aria-hidden="true"></i> Reports</button>
-        <div class="dropdown-menu" aria-labelledby="reports-dropdown">
-            <a class="dropdown-item" href="{% url 'reports:report-diaperchange-types-child' object.slug %}">Diaper Change Types</a>
-            <a class="dropdown-item" href="{% url 'reports:report-diaperchange-lifetimes-child' object.slug %}">Diaper Lifetimes</a>
-            <a class="dropdown-item" href="{% url 'reports:report-sleep-pattern-child' object.slug %}">Sleep Pattern</a>
-            <a class="dropdown-item" href="{% url 'reports:report-sleep-totals-child' object.slug %}">Sleep Totals</a>
-            <a class="dropdown-item" href="{% url 'reports:report-timeline-child' object.slug %}">Timeline</a>
-        </div>
-    </div>
-
-    <div class="row align-items-start mt-4">
+    <div class="row align-items-start">
         <div class="col-lg-4 col-md-6 col-sm-12">
             {% card_feeding_last object %}
             {% card_feeding_last_method object %}
