--- a/reports/templates/reports/sleep_totals.html
+++ b/reports/templates/reports/sleep_totals.html
@@ -2,6 +2,11 @@
 
 {% block title %}Sleep Totals - {{ object }}{% endblock %}
 
+{% block breadcrumbs %}
+    {{ block.super }}
+    <li class="breadcrumb-item active" aria-current="page">Sleep Totals</li>
+{% endblock %}
+
 {% block javascript %}
     {{ block.super }}
     {{ javascript|safe }}
