--- a/babyblotter/templates/registration/base.html
+++ b/babyblotter/templates/registration/base.html
@@ -1,6 +1,8 @@
 {% extends "babyblotter/base.html" %}
 {% load static widget_tweaks %}
 
+{% block breadcrumb_nav %}{% endblock %}
+
 {% block page %}
     <div id="view-{{ request.resolver_match.view_name }}" class="container">
         <div class="text-center mb-4">
