Rename project Baby Buddy.

--- a/babybuddy/static_src/scss/_global.scss
+++ b/babybuddy/static_src/scss/_global.scss
@@ -1,4 +1,4 @@
-// Baby Blotter site-wide custom styles.
+// Baby Buddy site-wide custom styles.
 
 // Temporary workaround. See: https://github.com/twbs/bootstrap/issues/23553
 .dropdown-menu-right {
