--- a/babybuddy/static_src/scss/_variables.scss
+++ b/babybuddy/static_src/scss/_variables.scss
@@ -2,4 +2,4 @@
 @import '../../../node_modules/bootstrap/scss/variables';
 @import 'themes/blueorange';
 
-// Baby Blotter site-wide variables.
+// Baby Buddy site-wide variables.
