--- a/babybuddy/templates/babybuddy/nav-dropdown.html
+++ b/babybuddy/templates/babybuddy/nav-dropdown.html
@@ -1,9 +1,9 @@
-{% extends 'babyblotter/base.html' %}
+{% extends 'babybuddy/base.html' %}
 {% load timers %}
 
 {% block nav %}
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="/"><span class="text-info">Baby</span> Blotter</a>
+        <a class="navbar-brand" href="/"><span class="text-info">Baby</span> Buddy</a>
 
         <div class="d-lg-none d-md-none ml-auto p-0 mr-2">
             <a class="text-success mr-2" href="{% url 'timer-add-quick' %}"><i class="icon icon-2x icon-timer" aria-hidden="true"></i></a>
