--- a/babybuddy/templates/babybuddy/page.html
+++ b/babybuddy/templates/babybuddy/page.html
@@ -1,4 +1,4 @@
-{% extends 'babyblotter/nav-dropdown.html' %}
+{% extends 'babybuddy/nav-dropdown.html' %}
 {% load static timers %}
 
 {% block page %}
