--- a/core/templates/core/diaperchange_list.html
+++ b/core/templates/core/diaperchange_list.html
@@ -1,4 +1,4 @@
-{% extends 'babyblotter/page.html' %}
+{% extends 'babybuddy/page.html' %}
 {% load widget_tweaks %}
 {% load bootstrap %}
 
@@ -56,7 +56,7 @@
             </tbody>
         </table>
 
-        {% include 'babyblotter/paginator.html' %}
+        {% include 'babybuddy/paginator.html' %}
     </div>
 
     {% if perms.core.add_diaperchange %}
