--- a/core/templates/core/feeding_confirm_delete.html
+++ b/core/templates/core/feeding_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'babyblotter/page.html' %}
+{% extends 'babybuddy/page.html' %}
 {% load widget_tweaks %}
 
 {% block title %}Delete a Feeding{% endblock %}
