--- a/core/templates/core/feeding_list.html
+++ b/core/templates/core/feeding_list.html
@@ -1,4 +1,4 @@
-{% extends 'babyblotter/page.html' %}
+{% extends 'babybuddy/page.html' %}
 {% load widget_tweaks %}
 {% load duration %}
 
@@ -62,7 +62,7 @@
             </tbody>
         </table>
 
-        {% include 'babyblotter/paginator.html' %}
+        {% include 'babybuddy/paginator.html' %}
     </div>
 
     {% if perms.core.add_feeding %}
