--- a/core/templates/core/timer_list.html
+++ b/core/templates/core/timer_list.html
@@ -1,4 +1,4 @@
-{% extends 'babyblotter/page.html' %}
+{% extends 'babybuddy/page.html' %}
 {% load bootstrap duration widget_tweaks %}
 
 {% block title %}Timers{% endblock %}
@@ -39,6 +39,6 @@
             </tbody>
         </table>
 
-        {% include 'babyblotter/paginator.html' %}
+        {% include 'babybuddy/paginator.html' %}
     </div>
 {% endblock %}
