--- a/babybuddy/static_src/scss/_functions.scss
+++ b/babybuddy/static_src/scss/_functions.scss
@@ -1,3 +1,3 @@
 @import '../../../node_modules/bootstrap/scss/functions';
 
-// Baby Blotter site-wide custom functions.
+// Baby Buddy site-wide custom functions.
