--- a/babybuddy/static_src/scss/_mixins.scss
+++ b/babybuddy/static_src/scss/_mixins.scss
@@ -1,3 +1,3 @@
 @import '../../../node_modules/bootstrap/scss/mixins';
 
-// Baby Blotter site-wide custom mixins.
+// Baby Buddy site-wide custom mixins.
