--- a/babybuddy/templates/babybuddy/base.html
+++ b/babybuddy/templates/babybuddy/base.html
@@ -6,13 +6,13 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{% block title %}{% endblock %} | Baby Blotter</title>
+    <title>{% block title %}{% endblock %} | Baby Buddy</title>
     {% if debug %}
-        <link rel="stylesheet" href="{% static "babyblotter/css/app.css" %}" />
-        <link rel="stylesheet" href="{% static "babyblotter/css/vendor.css" %}" />
+        <link rel="stylesheet" href="{% static "babybuddy/css/app.css" %}" />
+        <link rel="stylesheet" href="{% static "babybuddy/css/vendor.css" %}" />
     {% else %}
-        <link rel="stylesheet" href="{% static "babyblotter/css/app.min.css" %}" />
-        <link rel="stylesheet" href="{% static "babyblotter/css/vendor.min.css" %}" />
+        <link rel="stylesheet" href="{% static "babybuddy/css/app.min.css" %}" />
+        <link rel="stylesheet" href="{% static "babybuddy/css/vendor.min.css" %}" />
     {% endif %}
 </head>
 <body style="padding-top: 3rem;">
@@ -31,11 +31,11 @@
 {% block page %}{% endblock %}
 
 {% if debug %}
-    <script src="{% static "babyblotter/js/vendor.js" %}"></script>
-    <script src="{% static "babyblotter/js/app.js" %}"></script>
+    <script src="{% static "babybuddy/js/vendor.js" %}"></script>
+    <script src="{% static "babybuddy/js/app.js" %}"></script>
 {% else %}
-    <script src="{% static "babyblotter/js/vendor.min.js" %}"></script>
-    <script src="{% static "babyblotter/js/app.min.js" %}"></script>
+    <script src="{% static "babybuddy/js/vendor.min.js" %}"></script>
+    <script src="{% static "babybuddy/js/app.min.js" %}"></script>
 {% endif %}
 
 {% block javascript %}{% endblock %}
