--- a/core/templates/core/child_form.html
+++ b/core/templates/core/child_form.html
@@ -1,4 +1,4 @@
-{% extends 'babyblotter/page.html' %}
+{% extends 'babybuddy/page.html' %}
 
 {% block title %}
     {% if object %}
@@ -24,7 +24,7 @@
     {% else %}
         <h1>Add a Child</h1>
     {% endif %}
-    {% include 'babyblotter/form.html' %}
+    {% include 'babybuddy/form.html' %}
 {% endblock %}
 
 {% block javascript %}
