--- a/core/templates/core/note_form.html
+++ b/core/templates/core/note_form.html
@@ -1,4 +1,4 @@
-{% extends 'babyblotter/page.html' %}
+{% extends 'babybuddy/page.html' %}
 
 {% block title %}
     {% if request.resolver_match.url_name == 'note-update' %}
@@ -23,5 +23,5 @@
     {% else %}
         <h1>Add a Note</h1>
     {% endif %}
-    {% include 'babyblotter/form.html' %}
+    {% include 'babybuddy/form.html' %}
 {% endblock %}
