--- a/core/templates/core/note_list.html
+++ b/core/templates/core/note_list.html
@@ -1,4 +1,4 @@
-{% extends 'babyblotter/page.html' %}
+{% extends 'babybuddy/page.html' %}
 {% load widget_tweaks %}
 
 {% block title %}Notes{% endblock %}
@@ -51,7 +51,7 @@
             </tbody>
         </table>
 
-        {% include 'babyblotter/paginator.html' %}
+        {% include 'babybuddy/paginator.html' %}
     </div>
 
     {% if perms.core.add_note %}
