--- a/core/templates/core/sleep_list.html
+++ b/core/templates/core/sleep_list.html
@@ -1,4 +1,4 @@
-{% extends 'babyblotter/page.html' %}
+{% extends 'babybuddy/page.html' %}
 {% load widget_tweaks %}
 {% load duration %}
 
@@ -54,7 +54,7 @@
             </tbody>
         </table>
 
-        {% include 'babyblotter/paginator.html' %}
+        {% include 'babybuddy/paginator.html' %}
     </div>
 
     {% if perms.core.add_sleep %}
