--- a/core/templates/core/timer_form.html
+++ b/core/templates/core/timer_form.html
@@ -1,4 +1,4 @@
-{% extends 'babyblotter/page.html' %}
+{% extends 'babybuddy/page.html' %}
 {% load duration %}
 
 {% block title %}Timer{% endblock %}
@@ -19,5 +19,5 @@
     {% else %}
         <h1>Start Timer</h1>
     {% endif %}
-    {% include 'babyblotter/form.html' %}
+    {% include 'babybuddy/form.html' %}
 {% endblock %}
