--- a/core/static_src/scss/icons.scss
+++ b/core/static_src/scss/icons.scss
@@ -1,101 +1,101 @@
 @import '../../../node_modules/font-awesome/scss/font-awesome';
 
 .icon {
-    @extend .fa
+    @extend .fa;
 }
 
 .icon-2x {
-    @extend .fa-2x
+    @extend .fa-2x;
 }
 
 .icon-add {
-    @extend .fa-plus
+    @extend .fa-plus;
 }
 
 .icon-chevron-left {
-    @extend .fa-chevron-left
+    @extend .fa-chevron-left;
 }
 
 .icon-chevron-right {
-    @extend .fa-chevron-right
+    @extend .fa-chevron-right;
 }
 
 .icon-child {
-    @extend .fa-child
+    @extend .fa-child;
 }
 
 .icon-dashboard {
-    @extend .fa-tachometer
+    @extend .fa-tachometer;
 }
 
 .icon-delete {
-    @extend .fa-trash-o
+    @extend .fa-trash-o;
 }
 
 .icon-diaperchange {
-    @extend .fa-trash
+    @extend .fa-trash;
 }
 
 .icon-envelope {
-    @extend .fa-envelope
+    @extend .fa-envelope;
 }
 
 .icon-false {
-    @extend .fa-times-circle-o
+    @extend .fa-times-circle-o;
 }
 
 .icon-feeding {
-    @extend .fa-spoon
+    @extend .fa-spoon;
 }
 
 .icon-graph {
-    @extend .fa-bar-chart-o
+    @extend .fa-bar-chart-o;
 }
 
 .icon-list {
-    @extend .fa-list
+    @extend .fa-list;
 }
 
 .icon-lock {
-    @extend .fa-lock
+    @extend .fa-lock;
 }
 
 .icon-note {
-    @extend .fa-sticky-note
+    @extend .fa-sticky-note;
 }
 
 .icon-refresh {
-    @extend .fa-refresh
+    @extend .fa-refresh;
 }
 
 .icon-sad {
-    @extend .fa-frown-o
+    @extend .fa-frown-o;
 }
 
 .icon-sleep {
-    @extend .fa-bed
+    @extend .fa-bed;
 }
 
 .icon-stop {
-    @extend .fa-stop
+    @extend .fa-stop;
 }
 
 .icon-timer {
-    @extend .fa-clock-o
+    @extend .fa-clock-o;
 }
 
 .icon-true {
-    @extend .fa-check-circle-o
+    @extend .fa-check-circle-o;
 }
 
 .icon-tummytime {
-    @extend .fa-smile-o
+    @extend .fa-smile-o;
 }
 
 .icon-update {
-    @extend .fa-pencil
+    @extend .fa-pencil;
 }
 
 .icon-user {
-    @extend .fa-user
+    @extend .fa-user;
 }
