--- a/babybuddy/templates/babybuddy/base.html
+++ b/babybuddy/templates/babybuddy/base.html
@@ -7,8 +7,16 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% block title %}{% endblock %} | Baby Buddy</title>
+
     <link rel="stylesheet" href="{% static "babybuddy/css/app.css" %}" />
     <link rel="stylesheet" href="{% static "babybuddy/css/vendor.css" %}" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static "babybuddy/root/apple-touch-icon.png" %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static "babybuddy/root/favicon-32x32.png" %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static "babybuddy/root/favicon-16x16.png" %}">
+    <link rel="manifest" href="{% static "babybuddy/root/manifest.json" %}">
+    <link rel="mask-icon" href="{% static "babybuddy/root/safari-pinned-tab.svg" %}" color="#5bbad5">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body style="padding-top: 3rem;">
 
