Add a "naps" card.

--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -19,6 +19,7 @@
         <div class="col-lg-4 col-md-6 col-sm-12">
             {% card_sleep_last object %}
             {% card_sleep_day object %}
+            {% card_sleep_naps_day object %}
             {% card_tummytime_day object %}
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
